--- a/src/app/pages/cartelera/cartelera.page.html
+++ b/src/app/pages/cartelera/cartelera.page.html
@@ -1,13 +1,20 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>cartelera</ion-title>
+    <ion-title>Carteleras</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">cartelera</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <div>
+    <ion-grid>
+      <ion-row >
+        <ion-col *ngFor="let estrenos of Array_Estrenos.results" size="6">
+          <ion-img src="https://image.tmdb.org/t/p/original/{{estrenos.backdrop_path}}">
+  
+          </ion-img>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
