--- a/src/app/pages/buscar/buscar.page.html
+++ b/src/app/pages/buscar/buscar.page.html
@@ -1,13 +1,32 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>buscar</ion-title>
+    <ion-title>Buscar</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">buscar</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <!-- Searchbar -->
+
+  <ion-searchbar color="secondary" value="Dragón Ball" [debounce]="1000" #Query (ionChange)="handleInput(Query)"></ion-searchbar>
+
+  <div>
+    <ion-list lines="full">
+      <ion-item *ngFor="let result of Busqueda.results">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <ion-img class="img_result" src="https://image.tmdb.org/t/p/original/{{result.backdrop_path}}"></ion-img>
+            </ion-col>
+            <ion-col size="6">
+              <ion-label color="tertiary" class="result_title">
+                {{result.title}}
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </div>
+
 </ion-content>
