Añadiendo el modal a la vista buscar

--- a/src/app/pages/buscar/buscar.page.scss
+++ b/src/app/pages/buscar/buscar.page.scss
@@ -13,3 +13,8 @@ ion-item{
     border-bottom: #b3b3b3 solid 2px;
     width: 367px;
 }
+
+.text_vermas{
+    position: relative;
+    top: 50px;
+}
