--- a/src/app/pages/buscar/buscar.page.html
+++ b/src/app/pages/buscar/buscar.page.html
@@ -34,18 +34,27 @@
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Modal</ion-title>
+          <ion-title>Detalle de la Película</ion-title>
           <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
+            <ion-button (click)="setOpen(false)">Cerrar</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni illum quidem recusandae ducimus quos
-          reprehenderit. Veniam, molestias quos, dolorum consequuntur nisi deserunt omnis id illo sit cum qui. Eaque,
-          dicta.
+        <ion-label class="text-default" color="danger">{{Detalle.title}}</ion-label>
+        <ion-img src="https://image.tmdb.org/t/p/original/{{Detalle.poster_path}}"></ion-img>
+        <ion-label class="text-default text-sinopsis" color="primary">Sipnosis</ion-label>
+        <p class="ion-text-capitalize">
+          {{Detalle.overview}}
         </p>
+        <ion-label class="text-default text-sinopsis" color="primary">Cuadros</ion-label>
+        <ion-grid>
+          <ion-row>
+            <ion-col *ngFor="let fotogramas of Fotogramas.backdrops" size="4">
+              <ion-img  src="https://image.tmdb.org/t/p/original/{{fotogramas.file_path}}"></ion-img>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-content>
     </ng-template>
   </ion-modal>
