--- a/src/app/pages/buscar/buscar.page.scss
+++ b/src/app/pages/buscar/buscar.page.scss
@@ -18,3 +18,13 @@ ion-item{
     position: relative;
     top: 50px;
 }
+
+.text-default{
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.text-sinopsis{
+    position: relative;
+    left: 140px;
+}
