--- a/src/app/pages/cuenta/cuenta.page.html
+++ b/src/app/pages/cuenta/cuenta.page.html
@@ -1,13 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>cuenta</ion-title>
+    <ion-title>Cuenta</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">cuenta</ion-title>
+      <ion-title size="large">Tu Cuenta</ion-title>
     </ion-toolbar>
+  </ion-header>
+  <div class="container-user">
+    <ion-avatar>
+      <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    </ion-avatar>
+    <ion-label class="username" color="medium">Username</ion-label>
+    <ion-label class="correo" color="primary">example@hotmail.com</ion-label>
+  </div>
+
+  <ion-list lines="full">
+    <ion-item>
+      <ion-label>Cambiar Contraseña</ion-label><ion-icon name="key-outline"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-label color="danger">Cerrar Sesión</ion-label><ion-icon name="log-out-outline"></ion-icon>
+    </ion-item>
+  </ion-list>
+
+  <ion-header class="ion-text-center footer">
+    CineMagic - Todos los Derechos Reservados &copy; <br>
+    V1.0
   </ion-header>
 </ion-content>
