--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,9 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .md body{
     ion-icon{
@@ -34,3 +37,4 @@
         color: #000;
     }
 }
+
