--- a/src/app/users/sign-in/sign-in.page.html
+++ b/src/app/users/sign-in/sign-in.page.html
@@ -9,14 +9,32 @@
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                     Acceda a su Cuenta
                 </h1>
-                <form class="space-y-4 md:space-y-6" action="#">
+                <form [formGroup]="LoginForm" class="space-y-4 md:space-y-6" action="#" novalidate>
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Su Correo Electrónico</label>
-                        <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Correo@compañia.com" required="">
+                        <input formControlName="email" type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Correo@compañia.com" required="">
                     </div>
+                    <div *ngIf="this.LoginForm.controls?.['email'].touched && this.LoginForm.controls?.['email'].invalid">
+                      <ion-text *ngIf="errorControl.email.errors?.required">
+                        Correo Electrónico es Requerido
+                      </ion-text>
+                      <ion-text *ngIf="errorControl.email.errors?.pattern">
+                        El Correo Electrónico Debe Ser Valido
+                      </ion-text>
+                    </div>
+
                     <div>
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Su Contraseña</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                        <input formControlName="password" type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                    </div>
+                    <div *ngIf="this.LoginForm.controls?.['password'].touched && this.LoginForm.controls?.['password'].invalid">
+                      <ion-text *ngIf="errorControl.password.errors?.required">
+                        Contraseña es Requerido
+                      </ion-text>
+                      <ion-text *ngIf="errorControl.password.errors?.pattern">
+                        <ion-label color="dark">La Contraseña Debe de Contener</ion-label> <br>
+                        <ion-label color="primary">1 Carácter</ion-label>  <br> <ion-label color="danger">1 Mayúscula</ion-label> <br> <ion-label color="medium">1 Número</ion-label>
+                      </ion-text>
                     </div>
                     <div class="flex items-center justify-between">
                         <div class="flex items-start">
@@ -29,10 +47,14 @@
                         </div>
                         <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Olvidaste la Contraseña?</a>
                     </div>
-                    <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                       ¿Aún no tienes cuenta? <a [routerLink]="['/sign-up']" href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Regístraste</a>
                     </p>
+                    <button (click)="login()" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-teal-300 to-lime-300 group-hover:from-teal-300 group-hover:to-lime-300 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-lime-200 dark:focus:ring-lime-800">
+                      <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                          Iniciar Sesión
+                      </span>
+                    </button>
                 </form>
             </div>
         </div>
