Login y Register con firebase

--- a/src/app/users/sign-in/sign-in.page.scss
+++ b/src/app/users/sign-in/sign-in.page.scss
@@ -2,3 +2,13 @@
     position: relative;
     top: 35px;
 }
+
+.text{
+    position: relative;
+    left: 150px;
+}
+
+.redessociales_buttons{
+    position: relative;
+    left: 20px;
+}
