--- a/src/app/users/sign-up/sign-up.page.html
+++ b/src/app/users/sign-up/sign-up.page.html
@@ -49,10 +49,11 @@
             </div>
         </div>
     </div>
-    <ion-fab vertical="bottom" horizontal="end">
-      <ion-fab-button [routerLink]="['/sign-in']">
-        <ion-icon  name="chevron-back"></ion-icon> 
-      </ion-fab-button>
-    </ion-fab>
   </section>
+
+  <ion-fab vertical="bottom" class="ion-fab" horizontal="end">
+    <ion-fab-button [routerLink]="['/sign-in']">
+      <ion-icon  name="chevron-back"></ion-icon> 
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
