--- a/src/app/pages/cuenta/cuenta.page.html
+++ b/src/app/pages/cuenta/cuenta.page.html
@@ -15,7 +15,7 @@
       <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
     </ion-avatar>
     <ion-label class="username" color="medium">Username</ion-label>
-    <ion-label class="correo" color="primary">example@hotmail.com</ion-label>
+    <ion-label class="correo" color="primary">{{email||"correo@company.com"}}</ion-label>
   </div>
 
   <ion-list lines="full">
