--- a/src/app/pages/cuenta/cuenta.page.html
+++ b/src/app/pages/cuenta/cuenta.page.html
@@ -14,17 +14,20 @@
     <ion-avatar>
       <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
     </ion-avatar>
-    <ion-label class="username" color="medium">Username</ion-label>
+    <ion-label class="username" color="medium">{{username||"Admin98"}}</ion-label>
     <ion-label class="correo" color="primary">{{email||"correo@company.com"}}</ion-label>
   </div>
 
-  <ion-list lines="full">
-    <ion-item (click)="CambioContrasenaToast('bottom')">
-      <ion-label>Cambiar Contraseña</ion-label><ion-icon name="key-outline"></ion-icon>
-    </ion-item>
-    <ion-item (click)="CerrarSesionToast('bottom')">
-      <ion-label color="danger">Cerrar Sesión</ion-label><ion-icon name="log-out-outline"></ion-icon>
-    </ion-item>
+  <ion-list class="list-user" lines="full">
+    <ion-label class="apikey_text" color="tertiary">Tú Apikey: </ion-label><ion-label class="apikey" color="medium">{{apikey}}</ion-label>
+    <div class="list-user_account">
+      <ion-item>
+        <ion-label [routerLink]="['/email-verification']">Cambiar Contraseña</ion-label><ion-icon name="key-outline"></ion-icon>
+      </ion-item>
+      <ion-item (click)="Logout('bottom')">
+        <ion-label color="danger">Cerrar Sesión</ion-label><ion-icon name="log-out-outline"></ion-icon>
+      </ion-item>
+    </div>
   </ion-list>
 
 
