--- a/src/app/users/email-verification/email-verification.page.html
+++ b/src/app/users/email-verification/email-verification.page.html
@@ -1,13 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>email-verification</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">email-verification</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div>
+    <ion-title>Correo Eléctronico</ion-title>
+    <p class="container_newpassword">Para Recibir una Nueva Contraseña</p>
+  </div>
+
+  <form class="container_form">
+    <div class="ion-padding">
+      <ion-item>
+        <ion-input #Email placeholder="Ingrese su Correo Eléctronico"></ion-input>
+        <ion-icon name="mail-outline"></ion-icon>
+      </ion-item>
+    </div>
+    <button (click)="PasswordNueva(Email.value)" type="button" class="text-white bg-purple-700 hover:bg-purple-800 focus:outline-none focus:ring-4 focus:ring-purple-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900 btn">Cambiar Contraseña</button>
+  </form>
+
+  <ion-fab vertical="bottom" horizontal="end">
+    <ion-fab-button [routerLink]="['/tab-inicial/cuenta']">
+      <ion-icon  name="chevron-back"></ion-icon> 
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
